--- a/api/app-main/src/main/resources/templates/index.html
+++ b/api/app-main/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Hello World</title>
+    <title>PangKa Videos Online Project</title>
     <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
